tests/snapshots/run_wpt_conformance__trtx_gruCell_float16_tensors_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "gru_cell.https.any.js",
    "gruCell float16 tensors with all options",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: Unsupported operation: gruCell\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    gruCellBias: f16[12];\n    gruCellHiddenState: f16[3, 4];\n    gruCellInput: f16[3, 2];\n    gruCellRecurrentBias: f16[12];\n    gruCellRecurrentWeight: f16[12, 4];\n    gruCellWeight: f16[12, 2];\n  }\n\n  nodes {\n    [gruCellOutput] = gruCell(gruCellInput, gruCellWeight, gruCellRecurrentWeight, gruCellHiddenState, gruCellBias, gruCellRecurrentBias, activations=[\"relu\", \"relu\"], bias=3, label=\"\", layout=\"zrn\", recurrentBias=5, resetAfter=false);\n  }\n\n  outputs { gruCellOutput; }\n}\n",
        ),
    },
)
