tests/snapshots/run_wpt_conformance__trtx_gru_float16_tensors_steps_1_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gru.https.any.js gru float16 tensors steps=1 all options, trtx
 Failed to build graph: graph conversion failed for trtx: Unsupported operation: gru

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gruBias: f16[1, 12];
    gruInitialHiddenState: f16[1, 3, 4];
    gruInput: f16[1, 3, 2];
    gruRecurrentBias: f16[1, 12];
    gruRecurrentWeight: f16[1, 12, 4];
    gruWeight: f16[1, 12, 2];
  }

  nodes {
    [gruOutput1, gruOutput2] = gru(gruInput, gruWeight, gruRecurrentWeight, activations=["relu", "relu"], bias=0, direction="forward", initialHiddenState=1, label="", layout="zrn", recurrentBias=3, resetAfter=false, returnSequence=true);
  }

  outputs { gruOutput1; gruOutput2; }
}
